--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>ViZitka</title>
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/app.js"></script>
 </head>
 
 <body>
     <header id="header" class="header">
         <div class="container">
             <div class="nav">
+                               <button class="menu__burger"id="burger">
+                <span></span><span></span><span></span>
+               </button>
 
                 <ul class="menu">
                     <li><a href="#"> Home</a> </li>
@@ -27,7 +31,8 @@
 
             <div class="img-vektor"> <img src="img/Vector.png" alt="Vektor"> </div>
             <div class="wrapper">
-                <div class="menu-gam"><button class="menu-gamb"><img src="img/gamb.png" alt=""></button></div>
+               <!-- <div class="menu-gam"><button class="menu-gamb"><img src="img/gamb.png" alt=""></button></div>-->
+
                 <div class="fio">
                     <h2>Denis <br>Novik</h2>
                 </div>
