адаптация+меню+язык

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                     <li><a href="#"> Skills</a> </li>
                     <li><a href="#"> Portfolio</a> </li>
                     <li><a href="#"> Contacts</a> </li>
+                <div class="language_375">
+                    <div class="btn_375"> <button class="bt-ru">Ru</button></div>
+                    <div class="btn_375"> <button class="bt-v">|</button></div>
+                    <div class="btn_375"> <button class="bt-eng">Eng</button></div>
+                </div>
 
                 </ul>
             </div>
